# pls4all

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFERRALS.md  DISTRIBUTION.md  Direction_Technique.md  LICENSE  Makefile  NOTICE.md  Overview.md  PRODUCTION_AUDIT.md  README.md  ROADMAP.md  SECURITY.md  Status.md  THIRD_PARTY_LICENSES.md
bench/cpp/: CMakeLists.txt  n4m_donor_bench.cpp
bindings/js/: CMakeLists.txt  INPUT_CONTRACT.md  README.md  jsr.json  package-lock.json  package.json  tsconfig.json
bindings/js/examples/: consume.mjs
bindings/js/scripts/: copy-wasm.mjs
bindings/js/src/: aom.ts  config.ts  context.ts  core.ts  ffi.ts  index.ts  methodResult.ts  methods.ts  model.ts  n4m.d.ts  nativeModel.ts  p4a.d.ts  sklearn.ts  types.ts  wasm_entry.c
bindings/js/test/: generate_parity_fixture.py  parity_fixture.json  run_generic_method.mjs  run_methods_smoke.mjs  run_smoke.mjs  wasm_fit_debug.c
bindings/python/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  smoke_aom_pop.py
bindings/python/scripts/: build_libc4a_in_wheel.sh  build_libn4m_in_wheel.sh  build_libp4a_in_wheel.sh  generate_ffi_decls.py  make_python_package.py  prepare_wheel_packages.sh  retag_wheels.py  sklearn_parity_gate.sh
bindings/python/tests/: conftest.py  test_binding_parity.py  test_ffi.py  test_n4m_context.py  test_sklearn_regressors.py  test_sklearn_selectors.py  test_sklearn_slice.py  test_sklearn_surface.py
bindings/python_nirs4all_methods/: README.md  pyproject.toml
bindings/python_pls4all/: README.md  pyproject.toml
bindings/rust/pls4all/: Cargo.toml  build.rs
cpp/cli/: CMakeLists.txt  c4a_cli.cpp  n4m_cli.cpp  p4a_cli.cpp
cpp/src/: CMakeLists.txt  n4m_targets.cmake
cpp/src/c_api/: c_api_advanced.cpp  c_api_aom_selection.cpp  c_api_augmenters_edge_splines_random.cpp  c_api_augmenters_mixup_physical.cpp  c_api_config.cpp  c_api_context.cpp  c_api_feature_selection.cpp  c_api_filter_x_outlier.cpp  c_api_filters.cpp  c_api_filters_meta.cpp  c_api_gating_strategy.cpp  c_api_matrix.cpp  c_api_method_result.cpp  c_api_metrics.cpp  c_api_model.cpp  c_api_model_stub.cpp  c_api_operator_bank.cpp  c_api_orthogonalization.cpp  c_api_pipeline.cpp  c_api_preprocessing.cpp  c_api_resampling.cpp  c_api_rng.cpp  c_api_signal_conversion.cpp  c_api_splitters.cpp  c_api_validation_plan.cpp  c_api_version.cpp  c_api_wavelets.cpp  n4m_linux.map  p4a_linux.map  placeholder.cpp  rng_state_internal.hpp
cpp/src/c_api_n4m/: c_api_advanced.cpp  c_api_augmenters.cpp  c_api_augmenters_wavelength_spectral.cpp  c_api_context.cpp  c_api_fck.cpp  c_api_filters_meta.cpp  c_api_preprocessing.cpp  c_api_resampling.cpp  c_api_signal_conversion.cpp  c_api_signal_type.cpp  c_api_splitters.cpp  c_api_transfer_metrics.cpp
cpp/src/core/: aom_operators.cpp  aom_operators.hpp  aom_preprocessing.cpp  aom_preprocessing.hpp  aom_selection.cpp  aom_selection.hpp  bipls_selection.cpp  bipls_selection.hpp  bve_selection.cpp  bve_selection.hpp  cars_selection.cpp  cars_selection.hpp  classification_metrics.cpp  classification_metrics.hpp  component_coefficients.cpp  component_coefficients.hpp  config.cpp  config.hpp  context.cpp  context.hpp  cross_validation.cpp  cross_validation.hpp  cuda_dispatch.cpp  cuda_dispatch.hpp  ecr.cpp  ecr.hpp  emcuve_selection.cpp  emcuve_selection.hpp  extra_pls.cpp  extra_pls.hpp  ga_selection.cpp  ga_selection.hpp  gating_strategy.cpp  gating_strategy.hpp  gpr_pls.cpp  gpr_pls.hpp  interval_selection.cpp  interval_selection.hpp  ipw_selection.cpp  ipw_selection.hpp  (+81 more)
cpp/tests/: CMakeLists.txt  fixture_parser.hpp  harness.hpp  main.cpp  test_augmenters_edge_splines_random.cpp  test_augmenters_noise_drift.cpp  test_augmenters_phase17.cpp  test_augmenters_phase18.cpp  test_augmenters_wavelength_spectral.cpp  test_fck.cpp  test_filter_x_outlier.cpp  test_filters_meta.cpp  test_filters_y.cpp  test_internal_rng_choice.cpp  test_metrics.cpp  test_preprocessing_baselines.cpp  test_preprocessing_feature_selection.cpp  test_preprocessing_orthogonalization.cpp  test_preprocessing_resampling.cpp  test_preprocessing_signal_conversion.cpp  test_preprocessing_smoothing.cpp  test_preprocessing_stateful.cpp  test_preprocessing_stateless.cpp  test_preprocessing_wavelets.cpp  test_rng_engine.cpp  test_rng_mt_r.cpp  test_rng_pcg64.cpp  test_signal_type.cpp  test_splitters.cpp  test_transfer_metrics.cpp  test_uve_r_exact.cpp
cpp/tests/abi/: test_aom_global_public_abi.cpp  test_aom_operators.cpp  test_aom_pop_public_abi.cpp  test_aom_pop_selection.cpp  test_aom_preprocessing.cpp  test_aom_selection.cpp  test_bipls_selection.cpp  test_blas_backend.cpp  test_bve_selection.cpp  test_cars_selection.cpp  test_classification_extensions.cpp  test_classification_metrics.cpp  test_component_coefficients.cpp  test_config_setters.cpp  test_cross_validation.cpp  test_cuda_backend.cpp  test_di_pls.cpp  test_emcuve_selection.cpp  test_error_messages.cpp  test_extra_pls.cpp  test_ga_selection.cpp  test_interval_selection.cpp  test_ipw_selection.cpp  test_kernel_pls.cpp  test_lifecycle.cpp  test_lw_pls.cpp  test_matrix_view.cpp  test_mb_pls.cpp  test_metrics.cpp  test_model_selection.cpp  test_model_stubs.cpp  test_multiblock_extensions.cpp  test_oom_paths.cpp  test_openmp_backend.cpp  test_pipeline.cpp  test_pls_diagnostics.cpp  test_pls_lda.cpp  test_pls_logistic.cpp  test_pls_monitoring.cpp  test_random_frog_selection.cpp  (+21 more)
cpp/tests/fixtures/: advanced_validation_fixtures.hpp  aom_operator_fixtures.hpp  aom_pop_selection_fixtures.hpp  aom_preprocessing_fixtures.hpp  aom_selection_fixtures.hpp  bve_selection_fixtures.hpp  (+48 more)
cpp/tests_n4m/: CMakeLists.txt  harness.hpp  main.cpp  test_augmenters_edge_splines_random.cpp  test_augmenters_wavelength_spectral.cpp  test_preprocessing_feature_selection.cpp  test_preprocessing_resampling.cpp  test_rng_pcg64.cpp  test_signal_type.cpp
parity/python_generator/: README.md  pyproject.toml  requirements-lock.txt
(+4397 files in other folders)
