# SPDX-License-Identifier: CECILL-2.1
[build-system]
requires = ["setuptools>=77", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chemometrics4all"
version = "0.1.0"
description = "Python binding for the chemometrics4all C ABI (libc4a)."
readme = "README.md"
requires-python = ">=3.10"
license = "CECILL-2.1"
authors = [
    { name = "chemometrics4all contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/GBeurier/chemometrics4all"
Repository = "https://github.com/GBeurier/chemometrics4all"
Issues = "https://github.com/GBeurier/chemometrics4all/issues"

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chemometrics4all = [
    "lib/libc4a*",
    "lib/c4a*",
    "lib/*.so",
    "lib/*.so.*",
    "lib/*.dylib",
    "lib/*.dll",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
