# M9 scaffold — full nirs4all-methods Python package
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nirs4all-methods"
version = "1.0.0a0"   # alpha — not yet published
description = "Portable PLS / NIRS engine with stable C ABI — full umbrella package"
readme = "README.md"
license = { text = "CECILL-2.1" }
authors = [{ name = "Grégory Beurier", email = "beurier@cirad.fr" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Repository = "https://github.com/GBeurier/nirs4all-methods"
Documentation = "https://gbeurier.github.io/nirs4all-methods/"

# Scaffold: actual ctypes extension build comes from catalog/scripts/render_subset.py
# in the M9 focused session. For now this declares package metadata only.
