# M10 scaffold — slim pls4all subset Python package
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pls4all"
version = "1.0.0a0"
description = "Slim Partial Least Squares distribution — PLS subset of nirs4all-methods"
readme = "README.md"
license = { text = "CECILL-2.1" }
authors = [{ name = "Grégory Beurier", email = "beurier@cirad.fr" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/GBeurier/nirs4all-methods"
